Add exclude for Kubeval Validation2

--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -23,7 +23,7 @@ jobs:
         files: |
           ./project/**/*.yaml
         exclude:
-          '\./project/*.yaml'
+          ./project/*.yaml
 
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
