--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -18,12 +18,11 @@ jobs:
         path: .
     
     - name: Kubeval Validation
-      uses: codewdhruv/kubeval-validation@v1.1.1
+      uses: stefanprodan/kube-tools@v1.2.0
       with:
-        files: |
-          ./project/templates/*.yaml
-        # exclude:
-        #   './project/*.yaml'
+        command: |
+          echo "Run kubeval"
+          kubeval -d project --force-color --strict --ignore-missing-schemas
 
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
