--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -23,6 +23,8 @@ jobs:
         command: |
           echo "Run kubeval"
           kubeval -d ./project/templates --force-color --strict --ignore-missing-schemas
+      env:
+        SLACK_MESSAGE: ${{ steps.kubeval.outputs.stdout }}
 
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
@@ -30,7 +32,7 @@ jobs:
         SLACK_CHANNEL: 'project_slack'
         SLACK_COLOR: ${{ job.status }}
         SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: 'Результат Kubeval Validation: ${{ job.status }}'
+        SLACK_MESSAGE: 'Результат Kubeval Validation: ${{ env.SLACK_MESSAGE }}'
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
