Add exclude for Kubeval Validation13

--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -26,7 +26,7 @@ jobs:
       id: kubeval
       run: |
         echo "Run kubeval"
-        kubeval --strict -d ./project/templates --force-color --ignore-missing-schemas > 1.txt
+        kubeval --strict -d ./project/templates --force-color --ignore-missing-schemas > 1.txt || true
         output="$(cat 1.txt)"
         echo "::set-output name=output::$output"
         echo "$output"
