--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -25,10 +25,8 @@ jobs:
     - name: Kubeval Validation
       id: kubeval
       run: |
-        echo "Run kubeval --strict -d ./project/templates --force-color --ignore-missing-schemas >> 1.txt || true"
-        output="$(cat 1.txt)"
+        output="$(echo "Run kubeval --strict -d ./project/templates --force-color --ignore-missing-schemas >> 1.txt || true")"
         echo "::set-output name=output::$output"
-        echo "$output"
 
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
