--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -27,8 +27,8 @@ jobs:
       run: |
         pwd
         kubeval --strict -d ./project/templates >> 1.txt || true
-        cat 1.txt
-        output="$(cat 1.txt)"
+        pwd
+        output="$(cat ./1.txt)"
         echo "::set-output name=output::$output"
 
     - name: Slack Notification Kubeval Validation
