--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -26,10 +26,13 @@ jobs:
       id: kubeval
       run: |
         pwd
-        kubeval --strict -d ./project/templates >> 1.txt || true
-        pwd
-        output="$(cat ./1.txt)"
-        echo "::set-output name=output::$output"
+        kubeval --strict -d ./project/templates >> report.txt || true
+
+    - name: Upload validation report
+      uses: actions/upload-artifact@v2
+      with:
+        name: validation-report
+        path: report.txt
 
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
@@ -40,6 +43,7 @@ jobs:
         SLACK_MESSAGE: |
           Результат Kubeval Validation:
           ${{ steps.kubeval.outputs.output }}
+          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/artifacts/${{ github.run_id }}/validation-report)
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
