--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -43,7 +43,7 @@ jobs:
         SLACK_MESSAGE: |
           Результат Kubeval Validation:
           ${{ steps.kubeval.outputs.output }}
-          [Ссылка на отчет о валидации](https://github.com/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ github.run_id }})
+          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/artifacts/${{ github.run_id }}/${{ .github.ARTIFACT_ID }})
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
