--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -35,7 +35,6 @@ jobs:
         path: report.txt
 
     - name: Slack Notification Kubeval Validation
-      needs: Upload validation report
       uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_CHANNEL: 'project_slack'
@@ -44,7 +43,7 @@ jobs:
         SLACK_MESSAGE: |
           Результат Kubeval Validation:
           ${{ steps.kubeval.outputs.output }}
-          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/artifacts/${{ github.run_id }}/validation-report)
+          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/artifacts/${{ github.run_id }}/ARTIFACT_ID)
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
