--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -34,6 +34,12 @@ jobs:
         name: validation-report
         path: report.txt
 
+    - name: Download validation report artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: validation-report
+        path: downloaded-artifacts
+
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
       env:
@@ -43,7 +49,7 @@ jobs:
         SLACK_MESSAGE: |
           Результат Kubeval Validation:
           ${{ steps.kubeval.outputs.output }}
-          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/artifacts/${{ github.run_id }}/{artifact_id})
+           [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/blob/${{ github.sha }}/downloaded-artifacts/report.txt)
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
