--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -25,8 +25,9 @@ jobs:
     - name: Kubeval Validation
       id: kubeval
       run: |
-        pwd
         kubeval --strict -d ./project/templates >> report.txt || true
+        output="$(ehco report.txt)"
+        echo "::set-output name=output::$output"
 
     - name: Upload validation report
       uses: actions/upload-artifact@v2
@@ -49,7 +50,7 @@ jobs:
         SLACK_MESSAGE: |
           Результат Kubeval Validation:
           ${{ steps.kubeval.outputs.output }}
-           [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/blob/${{ github.sha }}/downloaded-artifacts/report.txt)
+          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/validation-report)
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
