test Kubeval Validation report13

--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -26,7 +26,7 @@ jobs:
       id: kubeval
       run: |
         kubeval --strict -d ./project/templates >> report.txt || true
-        output="$(echo report.txt)"
+        output="$(echo "cat report.txt")"
         echo "::set-output name=output::$output"
 
     - name: Upload validation report
