--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -34,14 +34,14 @@ jobs:
         echo '${{ steps.kubeval.outputs.output }}'
 
     - name: Upload validation report
-      id: artifact-upload-step
       uses: actions/upload-artifact@v4
+      id: artifact-upload-step
       with:
         name: validation-report
         path: report.txt
 
     - name: Output artifact URL
-      run:  echo 'Artifact URL is ${{ steps.artifact-upload-step.outputs.artifact-url }}'
+      run:  echo 'Artifact URL is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
     # - name: Download validation report artifact
     #   uses: actions/download-artifact@v2
