--- a/.github/workflows/Kubeval_Validation.yaml
+++ b/.github/workflows/Kubeval_Validation.yaml
@@ -26,12 +26,6 @@ jobs:
       id: kubeval
       run: |
         kubeval --strict -d ./project/templates >> report.txt || true
-        output="$(cat report.txt)"
-        echo "::set-output name=output::$output"
-
-    - name: Echo
-      run: |
-        echo '${{ steps.kubeval.outputs.output }}'
 
     - name: Upload validation report
       uses: actions/upload-artifact@v4
@@ -40,14 +34,8 @@ jobs:
         name: validation-report
         path: report.txt
 
-    - name: Output artifact URL
-      run:  echo 'Artifact URL is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-    # - name: Download validation report artifact
-    #   uses: actions/download-artifact@v2
-    #   with:
-    #     name: validation-report
-    #     path: downloaded-artifacts
+    - name: Output artifact ID
+      run:  echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
     - name: Slack Notification Kubeval Validation
       uses: rtCamp/action-slack-notify@v2
@@ -57,8 +45,7 @@ jobs:
         SLACK_ICON: https://github.com/rtCamp.png?size=48
         SLACK_MESSAGE: |
           Результат Kubeval Validation:
-          ${{ steps.kubeval.outputs.output }}
-           [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})
+          [Ссылка на отчет о валидации](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})
         SLACK_TITLE: Kubeval Validation
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
